--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Copa Influnce</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>Copa Influence</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=1" />
   </head>
   <body class="bg-gray-50 text-gray-900">
     <div id="root"></div>
